test/associative/diten/array-as-map-add-index.good
array-as-map-add-index.chpl:4: error: halt reached - Cannot implicitly add index: 'hello' to an array's domain. Use 'map' instead.
